force-app/main/default/objects/Location__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Name of the city where the event is held.</description>
    <inlineHelpText>City name</inlineHelpText>
    <label>City</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>