force-app/main/default/objects/Location__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Name of the postal code where the event is held.</description>
    <inlineHelpText>Landmark name</inlineHelpText>
    <label>Landmark</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>