force-app/main/default/objects/Location__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Name of the postal code where the event is held.</description>
    <inlineHelpText>Postal code name</inlineHelpText>
    <label>Postal Code</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
</CustomField>