force-app/main/default/objects/Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Name of the state where the event is held.</description>
    <inlineHelpText>State name</inlineHelpText>
    <label>State</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>