force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street name and the building address where the event is held.</description>
    <inlineHelpText>Street address</inlineHelpText>
    <label>Street</label>
    <length>95</length>
    <required>true</required>
    <type>Text</type>
</CustomField>